// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classnamesAlreadyDefined.jsx: classnamesAlreadyDefined.jsx 1`] = `
"import clsx from 'clsx'

function Component() {
    return (
        <Fragment>
            <p
                className={
                    clsx(
                        \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                        \\"bg-gray-900 border border-black rounded-md w-[340px] disabled:opacity-60\\",
                        \\"sm:h-[60em] hover:bg-gray-700 disabled:bg-gray-900 hover:cursor-pointer\\"
                    )
                }
            />
        </Fragment>
    );
}
"
`;

exports[`existingCall.jsx: existingCall.jsx 1`] = `
"import classnames from 'classnames'

function Component() {
    return (
        <Fragment>
            <p
                className={classnames(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border border-black rounded-md w-[340px] disabled:opacity-60\\",
                    \\"hover:cursor-pointer disabled:bg-gray-900 hover:bg-gray-700 sm:h-[60em]\\"
                )}
            />
        </Fragment>
    );
}
"
`;

exports[`readme.jsx: readme.jsx 1`] = `
"import clsx from \\"classnames\\";
function Component() {
    return (
        <Fragment>
            <p className={clsx(
                \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                \\"bg-gray-900 border border-black rounded-md w-[340px] disabled:opacity-60\\",
                \\"sm:h-[60em] hover:bg-gray-700 disabled:bg-gray-900 hover:cursor-pointer\\"
            )} />
        </Fragment>
    );
}
"
`;

exports[`regex: regex classnamesAlreadyDefined.jsx 1`] = `
"import clsx from 'clsx'

function Component() {
    return (
        <Fragment/>
           <p
                className={
                    clsx(
                        \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                        \\"bg-gray-900 border border-black rounded-md w-[340px] disabled:opacity-60\\",
                        \\"sm:h-[60em] hover:bg-gray-700 disabled:bg-gray-900 hover:cursor-pointer\\"
                    )
                }
            />>
        </Fragment>
    )
}
"
`;

exports[`regex: regex existingCall.jsx 1`] = `
"import classnames from 'classnames'

function Component() {
    return (
        <Fragment/>
           <p
                className={classnames(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border border-black rounded-md w-[340px] disabled:opacity-60\\",
                    \\"hover:cursor-pointer disabled:bg-gray-900 hover:bg-gray-700 sm:h-[60em]\\"
                )}
            />>
        </Fragment>
    )
}
"
`;

exports[`regex: regex readme.jsx 1`] = `
"function Component() {
    return (
        <Fragment/>
           <p className={clsx(
  \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
  \\"bg-gray-900 border border-black rounded-md w-[340px] disabled:opacity-60\\",
  \\"sm:h-[60em] hover:bg-gray-700 disabled:bg-gray-900 hover:cursor-pointer\\"
)} />>
        </Fragment>
    )
}
"
`;

exports[`regex: regex simple.jsx 1`] = `
"import React from 'react'

export default function Component() {
    return (
        <div className='ciao'/>
           <p className='ciao'/>>
           <p
                className={clsx(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border block w-full py-2 mt-8 text-sm font-semibold text-center\\",
                    \\"text-white bg-gray-900 border\\"
    <p
                className={clsx(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border\\",
                    \\"another one\\",
                    true && 'another'
                )}
        <p
                className={clsx(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border block w-full py-2 mt-8 text-sm font-semibold text-center\\",
                <p className={clsx(cond ? 'literal-class' : '')}/>         x
    <p className={clsx(\\"x\\", cond ? 'literal-class' : '', \\"z\\")}/>t-white bg<p className={clsx(\\"ciao sono un literal\\")}/>/p>
      <p className='a b c d e f g'/> 'literal-class' : ''}\`}></p>
            <p className={\`x \${cond ? 'literal-class' : ''} z\`}></p>

            <p className={'ciao sono un literal'}></p>
            <p className='a b c d e f g'></p>
        </div>
    )
}
"
`;

exports[`simple.jsx: simple.jsx 1`] = `
"import React from 'react'

import clsx from \\"classnames\\";

export default function Component() {
    return (
        <div className='ciao'>
            <p className='ciao'/>
            <p
                className={clsx(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border block w-full py-2 mt-8 text-sm font-semibold text-center\\",
                    \\"text-white bg-gray-900 border\\"
                )}
            ></p>
            <p
                className={clsx(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border\\",
                    \\"another one\\",
                    true && 'another'
                )}
            ></p>
            <p
                className={clsx(
                    \\"block w-full py-2 mt-8 text-sm font-semibold text-center text-white\\",
                    \\"bg-gray-900 border block w-full py-2 mt-8 text-sm font-semibold text-center\\",
                    \\"text-white bg-gray-900 border\\",
                    x
                )}
            ></p>
            <p className={clsx(cond ? 'literal-class' : '')}></p>
            <p className={clsx(\\"x\\", cond ? 'literal-class' : '', \\"z\\")}></p>

            <p className={clsx(\\"ciao sono un literal\\")}></p>
            <p className='a b c d e f g'></p>
        </div>
    );
}
"
`;
